fixed scrollbar sidebar center spinner

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,9 @@
   background-color: #33b0b3 !important;
 }*/
 
+.app-sidebar{
+  overflow-y: auto;
+}
 .invalid-feedback{
   display: block !important;
 }
